Connet Button Z-Index Fixed

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
     font-size: 1.4rem;
     font-weight: 500;
     transition: all 0.5s ease;
+    z-index: 1000;
 
 }
 
